tests/compile_fail/unstable_deref.stderr
error[E0277]: the trait bound `UnstableInt: stable_deref_trait::StableDeref` is not satisfied
  --> tests/compile_fail/unstable_deref.rs:18:59
   |
18 |     let data: Selfie<UnstableInt, Ref<i32>> = Selfie::new(int, |i| i);
   |                                               ----------- ^^^ expected an implementor of trait `stable_deref_trait::StableDeref`
   |                                               |
   |                                               required by a bound introduced by this call
   |
note: required by a bound in `Selfie::<'a, P, R>::new`
  --> src/selfie.rs
   |
   |     P: StableDeref + 'a,
   |        ^^^^^^^^^^^ required by this bound in `Selfie::<'a, P, R>::new`
help: consider borrowing here
   |
18 |     let data: Selfie<UnstableInt, Ref<i32>> = Selfie::new(&int, |i| i);
   |                                                           +
18 |     let data: Selfie<UnstableInt, Ref<i32>> = Selfie::new(&mut int, |i| i);
   |                                                           ++++

error[E0599]: the method `with_referential` exists for struct `Selfie<'_, UnstableInt, selfie::refs::Ref<i32>>`, but its trait bounds were not satisfied
   --> tests/compile_fail/unstable_deref.rs:20:10
    |
6   | struct UnstableInt(pub i32);
    | ---------------------------- doesn't satisfy `UnstableInt: stable_deref_trait::StableDeref`
...
20  |     data.with_referential(|r| assert_eq!(&42, *r));
    |          ^^^^^^^^^^^^^^^^ method cannot be called on `Selfie<'_, UnstableInt, selfie::refs::Ref<i32>>` due to unsatisfied trait bounds
    |
    = note: the following trait bounds were not satisfied:
            `UnstableInt: stable_deref_trait::StableDeref`
note: the following trait must be implemented
   --> $CARGO/stable_deref_trait-1.2.0/src/lib.rs
    |
    | pub unsafe trait StableDeref: Deref {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: the method `with_referential` exists for struct `Box<Selfie<'_, UnstableInt, selfie::refs::Ref<i32>>>`, but its trait bounds were not satisfied
   --> tests/compile_fail/unstable_deref.rs:23:10
    |
6   | struct UnstableInt(pub i32);
    | ---------------------------- doesn't satisfy `UnstableInt: stable_deref_trait::StableDeref`
...
23  |     data.with_referential(|r| assert_eq!(&42, *r));
    |          ^^^^^^^^^^^^^^^^ method cannot be called on `Box<Selfie<'_, UnstableInt, selfie::refs::Ref<i32>>>` due to unsatisfied trait bounds
    |
    = note: the following trait bounds were not satisfied:
            `UnstableInt: stable_deref_trait::StableDeref`
note: the following trait must be implemented
   --> $CARGO/stable_deref_trait-1.2.0/src/lib.rs
    |
    | pub unsafe trait StableDeref: Deref {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
